Update index.html to improve structure and content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="GlowGrid Media Marketing Agency />
     <meta name="author" content="GlowGridMedia" />
 
-    <meta property="og:title" content="Lovable Generated Project" />
+    <meta property="og:title" content="GlowGridMedia" />
     <meta property="og:description" content="GlowGrid Media offers branding, digital marketing, content creation, web development, and beyond to clients in Los Angeles and across the United States." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
