Fix: Correct missing quotation mark in index.html meta tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GlowGrid Media</title>
-    <meta name="description" content="GlowGrid Media Marketing Agency />
+    <meta name="description" content="GlowGrid Media Marketing Agency" />
     <meta name="author" content="GlowGridMedia" />
 
     <meta property="og:title" content="GlowGridMedia" />
